<resources>
    <string name="app_name">Test Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_products">Products</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_categories">Categories</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="registr">Register</string>

    <string name="enter_email">Enter your email</string>
    <string name="enter_first_name">Enter your First Name</string>
    <string name="enter_last_name">Enter your Last Name</string>
    <string name="enter_password">Enter your Last Name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="search_product">Search Product</string>
    <string name="start_price">Start Price</string>
    <string name="end_price">End Price</string>
    <string name="filter">Filter</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
</resources>