<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="@dimen/_320sdp"
        android:layout_height="@dimen/_300sdp"
        android:background="#fff"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/_320sdp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/filter"/>

        <EditText
            android:id="@+id/etStart"
            android:layout_width="match_parent"
            android:hint="@string/start_price"
            android:inputType="number"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etEnd"
            android:layout_width="match_parent"
            android:hint="@string/end_price"
            android:inputType="number"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/submit"
            android:textSize="@dimen/_16sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@color/black"/>



    </LinearLayout>
</layout>